--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,11 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
+    "downlevelIteration": true,
     "types": ["@types/node"]
 	},
   "exclude": [
-    "test/**"
+    "old/**/**",
+    "test/**/**"
   ]
 }
